# Comp491

./: .replit  BlackBoardAPI.py  DialogFlow_Bridge_API.py  KusisAPI.py  QuestionAnsweringModel.py  README.md  cookie.txt  dialog-state.docx  main.py  pyproject.toml
Bridge API/: DialogFlow_Bridge_API.py
Dialogflow-JSON/: Blackboard_notif.json  Conversation Exit.json  Default Fallback Intent.json  Default Welcome Intent.json  Fallback Intent.json  Welcome Intent.json  add_courses_to_calendar.json  campus_buisness.json  course_code.json  exchangeRate.json  get_attendance.json  get_calendarevents.json  get_campus_weather.json  get_exam_times.json  get_gpa.json  get_grade.json  get_lettergrade.json  get_working_hours.json  next_shuttle.json
Scrape API/: KusisAPI.py  main.py
docs/source/: DialogFlow_Bridge_API.rst  KusisAPI.rst  conf.py  modules.rst
flutterdialog/dialogflutter/: README.md  pubspec.yaml
flutterdialog/dialogflutter/assets/: dialog_flow_auth.json
flutterdialog/dialogflutter/lib/: app_body.dart  main.dart
flutterdialog/dialogflutter/test/: widget_test.dart
flutterwebview/: README.md  pubspec.yaml
flutterwebview/android/: build.gradle
flutterwebview/assets/: dialog_flow_auth.json
flutterwebview/ios/: firebase_app_id_file.json
flutterwebview/lib/: firebase_options.dart  main.dart
flutterwebview/test/: widget_test.dart
flutterwebview/web/: index.html  manifest.json
flutterwebview/windows/: CMakeLists.txt
src/: BlackBoardAPI.py  DialogFlow_Bridge_API.py  KusisAPI.py  QuestionAnsweringModel.py  main.py
(+24 files in other folders)
