[tool.poetry]
name = "repl_python3_Comp491"
version = "0.1.0"
description = ""
authors = ["ALKANAKISU <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
Flask = "^2.0.3"
replit = "^3.2.4"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
